# OpenTitan_with_Access_Control

./: .gitignore  README.md  change_includes.sh  extract_signal_sva.tcl  files_with_includes.txt  files_with_includes_memload.txt  files_with_includes_top_earlgrey_ip.txt  folders_with_dvs.txt  move_dvs.sh  open_earlgrey_upec.tcl  rerun_earlgrey_upec.tcl  transcript
build-onespin/lowrisc_systems_chip_earlgrey_verilator_0.1/: change_includes.sh  files_with_includes.txt
build-onespin/lowrisc_systems_chip_earlgrey_verilator_0.1/src/lowrisc_ibex_ibex_core_0.1/rtl/: ibex_branch_predict.sv  ibex_compressed_decoder.sv  ibex_controller.sv  ibex_core.sv  ibex_cs_registers.sv  ibex_csr.sv  ibex_decoder.sv  ibex_fetch_fifo.sv  ibex_id_stage.sv  ibex_if_stage.sv  ibex_load_store_unit.sv  ibex_multdiv_fast.sv  ibex_multdiv_slow.sv  ibex_wb_stage.sv
build-onespin/lowrisc_systems_chip_earlgrey_verilator_0.1/src/lowrisc_ibex_ibex_icache_0.1/rtl/: ibex_icache.sv
build-onespin/lowrisc_systems_chip_earlgrey_verilator_0.1/src/lowrisc_ibex_ibex_top_0.1/rtl/: ibex_top.sv
build-onespin/lowrisc_systems_chip_earlgrey_verilator_0.1/src/lowrisc_ip_adc_ctrl_1.0/rtl/: adc_ctrl.sv  adc_ctrl_reg_top.sv
build-onespin/lowrisc_systems_chip_earlgrey_verilator_0.1/src/lowrisc_ip_aes_0.6/rtl/: aes.sv  aes_cipher_control.sv  aes_cipher_core.sv  aes_control.sv  aes_core.sv  aes_ctr.sv  (+7 more)
build-onespin/lowrisc_systems_chip_earlgrey_verilator_0.1/src/lowrisc_prim_abstract_buf_0/: prim_buf.sv
build-onespin/lowrisc_systems_chip_earlgrey_verilator_0.1/src/lowrisc_prim_abstract_clock_buf_0/: prim_clock_buf.sv
build-onespin/lowrisc_systems_chip_earlgrey_verilator_0.1/src/lowrisc_prim_abstract_clock_gating_0/: prim_clock_gating.sv
build-onespin/lowrisc_systems_chip_earlgrey_verilator_0.1/src/lowrisc_prim_abstract_clock_inv_0/: prim_clock_inv.sv
build-onespin/lowrisc_systems_chip_earlgrey_verilator_0.1/src/lowrisc_prim_abstract_clock_mux2_0/: prim_clock_mux2.sv
build-onespin/lowrisc_systems_chip_earlgrey_verilator_0.1/src/lowrisc_prim_abstract_flash_0/: prim_flash.sv
build-onespin/lowrisc_systems_chip_earlgrey_verilator_0.1/src/lowrisc_prim_abstract_flop_0/: prim_flop.sv
build-onespin/lowrisc_systems_chip_earlgrey_verilator_0.1/src/lowrisc_prim_abstract_flop_2sync_0/: prim_flop_2sync.sv
build-onespin/lowrisc_systems_chip_earlgrey_verilator_0.1/src/lowrisc_prim_abstract_flop_en_0/: prim_flop_en.sv
build-onespin/lowrisc_systems_chip_earlgrey_verilator_0.1/src/lowrisc_prim_abstract_otp_0/: prim_otp.sv
build-onespin/lowrisc_systems_chip_earlgrey_verilator_0.1/src/lowrisc_prim_abstract_pad_attr_0/: prim_pad_attr.sv
build-onespin/lowrisc_systems_chip_earlgrey_verilator_0.1/src/lowrisc_prim_abstract_pad_wrapper_0/: prim_pad_wrapper.sv
build-onespin/lowrisc_systems_chip_earlgrey_verilator_0.1/src/lowrisc_prim_abstract_ram_1p_0/: prim_ram_1p.sv
build-onespin/lowrisc_systems_chip_earlgrey_verilator_0.1/src/lowrisc_prim_abstract_ram_2p_0/: prim_ram_2p.sv
build-onespin/lowrisc_systems_chip_earlgrey_verilator_0.1/src/lowrisc_prim_abstract_rom_0/: prim_rom.sv
build-onespin/lowrisc_systems_chip_earlgrey_verilator_0.1/src/lowrisc_prim_abstract_usb_diff_rx_0/: prim_usb_diff_rx.sv
build-onespin/lowrisc_systems_chip_earlgrey_verilator_0.1/src/lowrisc_prim_abstract_xor2_0/: prim_xor2.sv
default.onespin/: converterState_1069  gui.conf  onespin.ker  rsm_59076.rsm  unit_1058.csa
hw/: change_includes.sh  files_with_includes.txt
hw/ip/aon_timer/rtl/: aon_timer.sv
hw/ip/bus_ctrl/: bus_ctrl.core
hw/ip/bus_ctrl/data/: bus_ctrl.hjson
hw/ip/bus_ctrl/lint/: bus_ctrl.vlt  bus_ctrl.waiver
hw/ip/bus_ctrl/rtl/: bus_ctrl.sv  bus_ctrl_pkg.sv
hw/ip/rv_core_ibex/rtl/: rv_core_ibex.sv
hw/ip/rv_timer/data/: rv_timer.hjson
hw/ip/rv_timer/rtl/: rv_timer.sv
hw/ip/tlul/: adapter_slave.core
hw/ip/tlul/lint/: tlul_adapter_slave.waiver
hw/ip/tlul/rtl/: tlul_adapter_slave.sv  tlul_adapter_slave_hack.sv  tlul_adapter_slave_pkg.sv  tlul_fifo_async.sv  tlul_socket_1n.sv
hw/ip/untrusted_device/: untrusted_device.core
hw/ip/untrusted_device/data/: untrusted_device.hjson
hw/ip/untrusted_device/lint/: untrusted_device.waiver
hw/ip/untrusted_device/rtl/: rom_arb.sv  untrusted_device.sv
hw/syn/tools/dc/: sweep.tcl  testsynth.tcl
hw/top_earlgrey/: top_earlgrey.core  top_level_upec.core
hw/top_earlgrey/data/: top_earlgrey.hjson  xbar_main.hjson
hw/top_earlgrey/data/autogen/: top_earlgrey.gen.hjson
hw/top_earlgrey/dv/autogen/: tb__xbar_connect.sv  xbar_env_pkg__params.sv
hw/top_earlgrey/ip/xbar_main/: xbar_main.core
hw/top_earlgrey/ip/xbar_peri/: xbar_peri.core
hw/top_earlgrey/lint/: top_earlgrey_lint_cfgs.hjson  top_level_upec.waiver
hw/top_earlgrey/rtl/: padring.sv  physical_pads.sv  top_level_upec.sv
hw/top_earlgrey/rtl/autogen/: top_earlgrey.sv  top_earlgrey_pkg.sv
hw/top_earlgrey/sw/autogen/: top_earlgrey.c  top_earlgrey.h  top_earlgrey_memory.h  top_earlgrey_memory.ld
hw/upec/: clipboard.txt  counterexamples.sv  primary_io_constraints.sv  upec_integrity.sva  upec_peripheral_devices_constraints.sv  upec_ram_ret_aon_constraints.sv  upec_rv_core_ibex_constraints.sv  upec_rv_dm_constraints.sv  upec_sram_ctrl_main_constraints.sv  upec_xbar_main_constraints.sv  upec_xbar_peri_constraints.sv
sw/device/: meson.build
sw/device/examples/: meson.build
sw/device/examples/test_bus_ctrl/: README.md  meson.build  test_bus_ctrl.c
sw/device/examples/test_slave/: README.md  meson.build  test_slave.c
sw/device/lib/: pinmux.c
sw/device/lib/dif/: dif_plic_unittest.cc
sw/device/untrusted_rom/: README.md  irq_vector.S  meson.build  rom_crt.S  rom_link.ld  untrusted_sw.c
unnecessary_files/lowrisc_dv_otbn_model_0.1/: otbn_core_model.sv
unnecessary_files/lowrisc_dv_sim_sram_0/: sim_sram.sv
unnecessary_files/lowrisc_systems_chip_earlgrey_verilator_0.1/: chip_earlgrey_verilator.cc
unnecessary_files/lowrisc_systems_chip_earlgrey_verilator_0.1/rtl/: chip_earlgrey_verilator.sv
util/: syn_yosys.sh
util/topgen/: intermodule.py  merge.py  validate.py
util/topgen/templates/: toplevel.sv.tpl
(+213 files in other folders)
